// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConferenceSuggestion renders with full conference 1`] = `
<DocumentFragment>
  <div>
    <strong>
      The Conference
    </strong>
  </div>
  <div
    class="f7"
  >
    <div>
      <span>
        (The Acronym 1)
      </span>
    </div>
    <div>
      <span>
        1 May 1999 
      </span>
      <span>
        <span>
          Istanbul, 
        </span>
         TR
      </span>
    </div>
    <div>
      <span>
        12345
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ConferenceSuggestion renders with only title 1`] = `
<DocumentFragment>
  <div>
    <strong>
      The Conference
    </strong>
  </div>
  <div
    class="f7"
  >
    <div />
    <div>
      <span>
         
      </span>
      <span>
         
      </span>
    </div>
    <div>
      <span />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ConferenceSuggestion renders with title and address but without city 1`] = `
<DocumentFragment>
  <div>
    <strong>
      The Conference
    </strong>
  </div>
  <div
    class="f7"
  >
    <div />
    <div>
      <span>
         
      </span>
      <span>
         TR
      </span>
    </div>
    <div>
      <span />
    </div>
  </div>
</DocumentFragment>
`;
